--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ executors:
   ci-executor:
     docker:
       - image: githubtraining/ci-custom:latest
+        environment:
+          BUNDLER_VERSION: 2.0.1
 jobs:
   build:
     executor: ci-executor
@@ -11,7 +13,10 @@ jobs:
 
       - run:
           name: build dependencies
-          command: bundle install
+          command: |
+            gem update --system
+            gem install bundler
+            gem install rake
 
       - run:
           name: build the jekyll site
